BuildingsPy Changelog
---------------------

Version 2.2.0, xxx, 2020 -- Release 2.2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- xxx
- Added local relative tolerance along y axis by default
  (https://github.com/lbl-srg/BuildingsPy/pull/396)
- Fix rounding error issue on start and stop time values
  (https://github.com/lbl-srg/BuildingsPy/issues/363)
- For unit tests, ignore zero-size linear and nonlinear equations when comparing statistics
  (https://github.com/lbl-srg/BuildingsPy/issues/406)
- For unit tests, changed warning to an error if start or end times differ from reference results
  (https://github.com/lbl-srg/BuildingsPy/issues/404)
- Corrected timeout handling in buildingspy.simulate.base_simulator.py
  (https://github.com/lbl-srg/BuildingsPy/issues/385)
- Corrected class name lookup mechanism in buildingspy.development.refactor.move_class()
  (https://github.com/lbl-srg/BuildingsPy/issues/382)
- For unit tests, added optional comment that is printed if a model is excluded from
  the tests (https://github.com/lbl-srg/BuildingsPy/issues/389)
- Corrected generation of package.order for constant arrays (https://github.com/lbl-srg/BuildingsPy/issues/387)
- Refactored class buildingspy.simulate.Dymola, and added buildingspy.simulate.Optimica
- Added check for wrong derivative implementation that is reported by Dymola 2021x (https://github.com/lbl-srg/BuildingsPy/issues/376).

Version 2.1.0, May 28, 2020 -- Release 2.1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Updated dependency to pyfunnel, and added requirements.txt file.
- For unit tests, display plots before asking to add new reference results. (Issue 344)
- When writing package.order, preserved the ordering of constants from the .mo file.
- Changed doctest to Python 3.6.
- For unit tests, added support for OPTIMICA.
- For unit tests, changed to non-pedantic mode in Dymola if a model
  is in the Obsolete package.
- For unit tests, corrected problem on Windows if a user enabled DDE.