@@ -2900,6 +2900,10 @@ class Tester(object):
                         runFil.write('Advanced.PedanticModelica = true;\n')
                     else:
                         runFil.write('Advanced.PedanticModelica = false;\n')
+                    # Flag that can change the simulation statistics
+                    runFil.write(
+                        'orig_Advanced_GenerateVariableDependencies = Advanced.GenerateVariableDependencies;\n')
+                    runFil.write('Advanced.GenerateVariableDependencies = false;\n')
                     # Deactivate DDE
                     if platform.system() == "Windows":
                         runFil.write('// Deactivate DDE\n')
@@ -3180,6 +3184,9 @@ class Tester(object):
                     runFil.write('// Reset DDE settings like before\n')
                     runFil.write('    sett[{}] = DDE_orig;\n'.format(posDDE))
                     runFil.write('    SetDymolaCompiler(comp, sett);\n')
+                # Reset Advanced flag
+                runFil.write(
+                    'Advanced.GenerateVariableDependencies = orig_Advanced_GenerateVariableDependencies;\n')
                 runFil.write("exit();\n")
                 runFil.close()
             ###################################################################################
