@@ -4,6 +4,8 @@ BuildingsPy Changelog
 Version 2.2.0, xxx, 2020 -- Release 2.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - xxx
+- For unit tests, set Advanced.GenerateVariableDependencies = false as this can change the set of nonlinear equations
+  (https://github.com/lbl-srg/BuildingsPy/issues/410)
 - Added local relative tolerance along y axis by default
   (https://github.com/lbl-srg/BuildingsPy/pull/396)
 - Fix rounding error issue on start and stop time values
